# EDCB-to-EPGStation

./: .gitattributes  .gitignore  LICENSE  README.md  config.yml.template  edcb_to_epgstation_ts.bat  edcb_to_epgstation_ts.py  edcb_to_epgstation_ts.spec  edcb_to_epgstation_ts_debug.bat  memo.txt  pyproject.toml  requirements.txt
