[tool.poetry]
name = "edcb-to-epgstation"
version = "0.1.0"
description = ""
authors = ["stuayu <60843145+stuayu@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pyyaml = "^6.0.1"
psutil = "^6.0.0"
setproctitle = "^1.3.3"
python-box = "^7.2.0"
loguru = "^0.7.2"
nuitka = "^2.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
